@@ -1,5 +1,8 @@
 2006-10-24 Sandro Santilli <strk@refractions.net>
 
+	* operation::overlay::FuzzyPointLocator:
+	  eliminate non-polygonal components from consideration when
+	  testing the location of points.
 	* precision::GeometrySnapper: snapPrecisionFactor augmented
 	  from 10e-12 to 10e-10.
 	* precision::LineStringSnapper (findSegmentToSnap):
